INV-52 : Updated PrevisionServiceImpl to use Math.clamp